get category by id

--- a/src/Noazul.Domain.Core/Noazul.Domain.Core.csproj
+++ b/src/Noazul.Domain.Core/Noazul.Domain.Core.csproj
@@ -4,5 +4,6 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="NetDevPack" Version="7.0.1" />
+		<PackageReference Include="Nudes.Retornator.Core" Version="1.0.951" />
 	</ItemGroup>
 </Project>
