--- a/src/Noazul.Services.Api/Properties/launchSettings.json
+++ b/src/Noazul.Services.Api/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       },
       "launchBrowser": true,
       "launchUrl": "swagger"
