--- a/src/Noazul.Services.Api/appsettings.Production.json
+++ b/src/Noazul.Services.Api/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=dpg-ckmt7fqv7m0s738p41dg-a.oregon-postgres.render.com,5432;Database=stock_management_seu6;User Id=stock_management_seu6_user;Password=DFSAHKFrTI3n67leiMXotlGK4R4JC503;"
+    "DefaultConnection": "Server=dpg-cnllcv2cn0vc73dr94vg-a.oregon-postgres.render.com,5432;Database=inbluedb;User Id=root;Password=43c9XMj9CQwmgSHWG876U6ff2l6pO4nG;"
   },
   "Logging": {
     "LogLevel": {
